# imgui_desktop

./: .gitignore  .gitmodules  Cargo.toml  messages.json
crates/goop_renderer/: Cargo.toml
crates/goop_renderer/src/: lib.rs  renderer.rs  vulkan_helpers.rs
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: app.rs  clipboard.rs  lib.rs  main.rs  renderer.rs  vulkan_helpers.rs
