[package]
name = "vulkan-ash-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
ash = "0.37.3"
ash-window = "0.12.0"
log = "0.4.19"
nalgebra-glm = "0.18.0"
png = "0.17.9"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.5.2"
tobj = "4.0.0"
winit = "0.27"
