[package]
name = "goop_renderer"
version = "0.1.0"
edition = "2021"

[lib]
name = "goop_renderer"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.72"
ash = "0.37.3"
ash-window = "0.12.0"
imgui = {version = "0.11.0", optional = true}
imgui-rs-vulkan-renderer = {version = "1.9.0", optional = true}
imgui-winit-support = {version = "0.11.0", optional = true}
log = "0.4.19"
nalgebra-glm = "0.18.0"
png = "0.17.9"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.5.2"
tobj = "4.0.0"
winit = "0.27"

[features]
goop_imgui = ["imgui-rs-vulkan-renderer", "imgui", "imgui-winit-support"]
